[workspace]
members = [
    "contracts/alliance-hub",
    "packages/alliance-protocol",
]
exclude = []

[workspace.package]
version       = "0.1.1"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/terra-money/alliance-protocol"
homepage      = "https://github.com/terra-money/alliance-protocol"
documentation = "https://github.com/terra-money/alliance-protocol"
rust-version  = "1.68.2"

[profile.dev]
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[workspace.dependencies]
cosmwasm-std = "1.5.5"
cosmwasm-schema = "1.5.5"
cw-storage-plus = { version = "1.2.0" }
cw-asset = { version = "3.1.1" }
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
terra-proto-rs = { version = "3.0.1", default-features = false}
thiserror = { version = "1.0.38" }
cw2 = "1.1.2"
cw20 ="1.1.2"
semver = "1.0.22"
ve3-shared = "0.9.0"

alliance-protocol = { path = "./packages/alliance-protocol" }