[package]
name = "alliance-oracle"
version = "0.1.0"
authors = ["Terra Money <core@terra.money>"]
edition = "2018"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
cw_storage_plus_016 = { workspace = true }
cw_asset_v2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
cw2 = { workspace = true }
terra-proto-rs = { workspace = true }
alliance-protocol = { workspace = true }
